# exam

./: CMakeLists.txt  a.out  microshell1.c  mymicroshell.c  test  test.c
Exam04/: CMakeLists.txt  micro.c  microshell  mymicro.c  testtest.c
Exam05/cpp_module_00/: Warlock.hpp
Exam05/cpp_module_02/: BrickWall.hpp  Fireball.hpp  Polymorph.hpp  SpellBook.hpp
exam03/: CMakeLists.txt  a.out  file  micro_paint (1).c  mini_paint (1).c  my_micro.c  mymicro.c
exam06/: Exam06-to.c  Exam06-youbae.c  a.out  exam06.c  exam_incho.c  main copy.c  main.c  main_copy.c
exam06/a.out.dSYM/Contents/Resources/DWARF/: a.out
myexam/: CMakeLists.txt
myexam/my05/: Warlock.cpp  Warlock.hpp
